[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/PlayerSprite.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/JumpSound.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 5, 4 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 6 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
BULLET_SPEED = 100

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Jump = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 7

[node name="PlayerGun" parent="PlayerSprite" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 2.25, 2.875 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[node name="CameraFollow" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -44.5681 )
update_rotation = false
update_scale = false

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
